fixed bug; gaps between images in a row

--- a/css/styles.css
+++ b/css/styles.css
@@ -175,8 +175,4 @@ color: white;
 }
 
 
-.h3text{
-  color:#F15A29;
-  font-family: serif;
-  font-size: 30px;
-}
+.
